# triton-windows

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  TODO.md  build-core.ps1  build.ps1  build_triton.ps1  check_available_versions.ps1  complete_build_triton.ps1  fix_nvgpu_enum_conflicts.patch  pyproject.toml  regenerate_tablegen.ps1  setup.py  test_cpu_only.py  test_urls.bat  verify_builds.py
.qoder/quests/: check-cuda-12-9-update-possibilities.md  compile-with-build-ps1.md  test-report-generation.md  unknown-task-1757275621.md  unknown-task.md  update-project-to-use-pybind11-3-0-1.md
cmake/: nvidia-toolchain-version.json
include/triton/Analysis/: Membar.h
include/triton/Conversion/TritonGPUToLLVM/: ElementwiseOpToLLVMBase.h  TritonFPConversion.h
include/triton/Dialect/Triton/IR/: CMakeLists.txt  Dialect.h  Ops.h.inc  TritonEnums.h  Utility.h
include/triton/Dialect/TritonGPU/IR/: CMakeLists.txt  Dialect.h
include/triton/Dialect/TritonNvidiaGPU/IR/: CMakeLists.txt  TritonNvidiaGPUOps.td
include/triton/Dialect/TritonNvidiaGPU/Transforms/: TMAUtilities.h
lib/Analysis/: Alias.cpp  Allocation.cpp  AxisInfo.cpp
lib/Conversion/TritonGPUToLLVM/: FuncOpToLLVM.cpp  MemoryOpToLLVM.cpp  Utility.cpp  ViewOpToLLVM.cpp
lib/Conversion/TritonToTritonGPU/: TritonGPUConversion.cpp
lib/Dialect/TritonGPU/IR/: Dialect.cpp
lib/Dialect/TritonGPU/Transforms/: AccelerateMatmul.cpp  OptimizeThreadLocality.cpp
lib/Dialect/TritonGPU/Transforms/Pipeliner/: TMAStoresPipeline.cpp
lib/Dialect/TritonNvidiaGPU/IR/: CMakeLists.txt
lib/Dialect/TritonNvidiaGPU/Transforms/: PlanCTA.cpp  TMALowering.cpp  TMAUtilities.cpp
lib/Instrumentation/: PrintLoadStoreMemSpaces.cpp
python/: requirements.txt
python/src/: CMakeLists.txt  gluon_ir.cc  ir.cc  llvm.cc  main.cc
python/test/unit/language/: test_compile_errors.py  test_conversions.py  test_core.py  test_tensor_descriptor.py
python/triton/_C/: __init__.py  libtriton.exp  libtriton.lib
python/triton_kernels/: pyproject.toml
scripts/: build-llvm-project.ps1
sm61/: basic_functionality_test.py  benchmark_script.py  comprehensive_gpu_test.py  comprehensive_nvgpu_fix.ps1  comprehensive_test.ps1  fix_nvgpu_dialect_registration.ps1  fix_nvgpu_registration.ps1  nvgpu_dialect_patch.md  nvgpu_dialect_registration_fix.md  nvgpu_fix_summary.md  run_benchmarks_sm61.ps1  run_sm61_tests.ps1  simple_nvgpu_fix.ps1  test_nvgpu_dialect_fix.py  triton_compatibility_test.py  verify_nvgpu_fix.py  verify_sm61_files.py  verify_triton_nvidia.py
test/Analysis/: alias.mlir
test/TritonNvidiaGPU/: plan-cta.mlir  target-info.mlir
